# zoom-report

./: .env.example  .gitignore  README.md  example.env  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: test.yml
assets/: meeting_id.example
extra/: access_token.py  authorize.py  refresh_token.py  update_attendance.sh
scripts/: project_helper.py
src/: attendance.py  config.py  googl.py  main.py  storage.py  upload.py
src/api/: dropbox.py  jwt.py  oauth2.py  ragic.py  zoom.py
src/common/: enums.py
src/logger/: __init__.py  pkg_logger.py
tests/: conftest.py
tests/unit_test/: test_helpers.py  test_pkg.py  test_singletons.py
zoom_report/: __init__.py  attendance.py  command_line.py  main.py  storage.py
zoom_report/api/: jwt.py  oauth.py  ragic.py  zoom.py
zoom_report/automate/: attendance.py  storage.py
zoom_report/common/: enums.py  helpers.py
zoom_report/local/: disk.py
zoom_report/logger/: __init__.py  pkg_logger.py
zoom_report/process/: instances.py  meetings.py
zoom_report/sdk/: transfer_data.py
