[tool.poetry]
name = "zoom_report"
version = "0.2.0"
description = ""
authors = ["Jacky Lee <jla524@sfu.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.2"
Authlib = "^0.15.5"
colorlog = "^6.6.0"
colorama = "^0.4.4"
dropbox = "^11.25.0"
mypy = "^0.931"

[tool.poetry.dev-dependencies]
requests = "^2.27.1"
pandas = "^1.3.5"

[tool.poetry.scripts]
report = "zoom_report.main:run"
analyze = "scripts.project_helper:run_analyzer"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
