[tool.poetry]
name = "zoom_report"
version = "0.3.0"
description = ""
authors = ["Jacky Lee <jla524@sfu.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.2"
Authlib = "^0.15.5"
colorlog = "^6.6.0"
colorama = "^0.4.4"
dropbox = "^11.25.0"
mypy = "^0.931"
types-requests = "^2.27.7"
pylint = "^2.12.2"
types-pytz = "^2021.3.4"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
requests = "^2.27.1"
pandas = "^1.3.5"

[tool.poetry.scripts]
report = "zoom_report.main:run"
analyze = "scripts.project_helper:run_analyzer"
lint = "scripts.project_helper:run_linter"
test = "scripts.project_helper:run_tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
