[tool.poetry]
name = "zoom_report"
version = "1.0.0"
description = ""
authors = ["Jacky Lee <jla524@sfu.ca>"]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0"
colorlog = "^6.6.0"
colorama = "^0.4.4"
mypy = "^1.0"
types-requests = "^2.31"
pylint = "^3.0"
types-pytz = "^2024.1"
pytest = "^8.0"
setuptools = "^80.9.0"

[tool.poetry.group.dev.dependencies]
requests = "^2.31"
pandas = "^2.0"

[tool.poetry.scripts]
report = "zoom_report.main:run"
analyze = "scripts.project_helper:run_analyzer"
lint = "scripts.project_helper:run_linter"
test = "scripts.project_helper:run_tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
